--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title data-i18n="dom.title">Gonzalo Cabezas | Web Frontend developer</title>
-    <meta data-i18n="dom.description" name="description" content="Portfolio and resume of Gonzalo Cabezas, a Frontend developer specialized in modern web technologies">
+    <meta name="description" content="Portfolio and resume of Gonzalo Cabezas, a Frontend developer specialized in modern web technologies">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -187,8 +187,8 @@
             <!-- NOSCRIPT WARNING -->
             <noscript>
                 <div id="noscript-warning">
-                    <h3 data-i18n="noscript.title">🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
-                    <p data-i18n="noscript.description"><strong data-i18n="noscript.strong">This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it</p>
+                    <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
+                    <p><strong>This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -197,19 +197,19 @@
                 <noscript>
                     <ul>
                         <li> <!-- DARK MODE -->
-                            <a class="dark-mode-btn icons-scale" aria-label="Toogle dark mode" href="fallbacks/dark/index.en.html">🌙</a>
+                            <a class="dark-mode-btn icons-scale" aria-label="Toggle dark mode" href="fallbacks/dark/index.en.html">🌙</a>
                         </li>
                         <!-- LANG MENU -->
                         <li>
                             <a aria-label="Spanish" href="fallbacks/light/index.es.html">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#es-flag"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a aria-label="Catalan" href="fallbacks/light/index.ca.html">
-                                <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                                <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="img/sprite.svg#cat-flag"></use>
                                 </svg>
                             </a>
@@ -220,26 +220,26 @@
                 <!-- JS NAV -->
                 <ul class="js-disabled">
                     <li> <!-- DARK MODE -->
-                        <button data-i18n-attr="aria-label" data-i18n="dark.btn" id="theme-dark-btn" class="dark-mode-btn icons-scale" aria-label="Toogle dark mode" type="button">🌓</button> <!-- JS ENABLED -->
+                        <button data-i18n-attr="aria-label" data-i18n="dark.btn" id="theme-dark-btn" class="dark-mode-btn icons-scale" aria-label="Toggle dark mode" type="button">🌓</button> <!-- JS ENABLED -->
                     </li>
                     <!-- LANG MENU -->
                     <li>
                         <button data-i18n-attr="aria-label" data-i18n="lang.btn.ca" data-lang="ca" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
-                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#cat-flag"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label" data-i18n="lang.btn.es" data-lang="es" class="icons-scale" aria-label="Spanish" type="button">
-                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#es-flag"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label" data-i18n="lang.btn.en" class="icons-scale" data-lang="en" aria-label="English" type="button">
-                            <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#uk-flag"></use>
                             </svg>
                         </button>
@@ -255,10 +255,10 @@
                         <picture>
                             <source type="image/webp" srcset="img/photos/gonzalo@1x.webp 1x, img/photos/gonzalo@2x.webp 2x, img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="img/photos/gonzalo@1x.png 1x, img/photos/gonzalo@2x.png 2x, img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt" data-i18n="gonzalo.photo" src="img/photos/gonzalo@3x.png" alt="Retrato de Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt" data-i18n="gonzalo.photo" src="img/photos/gonzalo@3x.png" alt="Portrait of Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
-                            <h1 data-i18n="profile.name">Gonzalo Cabezas Núñez</h1>
+                            <h1>Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile.title">Frontend developer transitioning to Fullstack</h2>
                             <p data-i18n="profile.bio">I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why Red Teaming strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
@@ -267,18 +267,18 @@
                 <section>
                     <h3 data-i18n="section.languages">Languages</h3>
                     <ul id="languages">
-                        <li>Catalan
-                            <svg data-i18n-attr="aria-label" data-i18n="lang.ca" class="icons-color-1" role="img" aria-label="Native level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                        <li data-i18n="lang.ca">Catalan
+                            <svg class="icons-color-1" role="img" aria-label="Native level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
-                        <li>Spanish
-                            <svg data-i18n-attr="aria-label" data-i18n="lang.es" class="icons-color-1" role="img" aria-label="Native level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                        <li data-i18n="lang.es">Spanish
+                            <svg class="icons-color-1" role="img" aria-label="Native level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#native-lang"></use>
                             </svg>
                         </li>
-                        <li>English
-                            <svg data-i18n-attr="aria-label" data-i18n="lang.en" class="icons-color-1" role="img" aria-label="Intermediate level" width="124" height="18" preserveAspectRatio="xMinYMin meet">
+                        <li data-i18n="lang.en">English
+                            <svg class="icons-color-1" role="img" aria-label="Intermediate level" aria-hidden="false" width="124" height="18" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#medium-lang"></use>
                             </svg>
                         </li>
@@ -324,11 +324,17 @@
                 <section>
                     <h4 data-i18n="section.studies">Studies</h4>
                     <article>
-                        <h5><strong data-i18n="studies.daw.title">Application development with web technologies</strong> <span data-i18n="studies.daw.span">(studying)</span></h5>
+                        <h5 data-i18n="studies.daw.title">
+                            <strong>Application development with web technologies</strong> <span>(studying)</span>
+                        </h5>
                         <h6>Institució Pau Casals</h6>
                         <ol>
-                            <li data-i18n="studies.daw.ja"><abbr title="JavaScript Object Notation">JSON</abbr> and <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
-                            <li data-i18n="studies.daw.jp">Java and <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span></li>
+                            <li data-i18n="studies.daw.ja">
+                                <abbr title="JavaScript Object Notation">JSON</abbr> and <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
+                            </li>
+                            <li data-i18n="studies.daw.jp">
+                                Java and <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span>
+                            </li>
                         </ol>
                     </article>
                     <article>
@@ -339,10 +345,10 @@
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> and <abbr title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla and web publication</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><abbr title="JavaScript">JS</abbr> Vanilla and web publication</a>
                             </li>
                             <li>
-                                <a data-i18n="studies.ifcd.add" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf">Additional training</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf" aria-label="See certificate">Additional training</a>
                             </li>
                         </ol>
                     </article>
@@ -395,7 +401,7 @@
                         <h6>Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a data-i18n="studies.uned.access" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf">Access to university</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf" aria-label="See certificate">Access to university</a>
                             </li>
                         </ol>
                     </article>
@@ -403,7 +409,7 @@
                         <h6>IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n="studies.eso.title" class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf"><abbr title="Educación Secundaria Obligatoria">ESO</abbr> Certificate</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf" aria-label="See certificate"><abbr title="Educación Secundaria Obligatoria">ESO</abbr> Certificate</a>
                             </li>
                         </ol>
                     </article>
@@ -450,17 +456,17 @@
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
-                                <ul data-i18n-attr="aria-label" data-i18n="portfolio.repos" aria-label="Repository menu">
+                                <ul aria-label="Repository menu">
                                     <li>
                                         <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
-                                            <svg class="icons-color-2 icons-scale" role="img" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
-                                            <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                            <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -481,14 +487,14 @@
                                 </li>
                                 <li id="github-icon">
                                     <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
-                                        <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#github"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li id="vercel-icon">
                                     <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Vercel">
-                                        <svg class="icons-color-2 icons-scale" role="img" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#vercel"></use>
                                         </svg>
                                     </a>
@@ -508,8 +514,8 @@
                             </strong>
                         </p>
                         <!--//SIGNATURE END -->
-                        <a data-i18n-attr="aria-label" data-i18n="portfolio.estopa" href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Estopa Fanpage, unfinished">
+                        <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
+                            <img data-i18n-attr="alt" data-i18n="portfolio.estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Estopa Fanpage, unfinished">
                         </a>
                     </div>
                 </section>
@@ -518,8 +524,8 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
-                🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em data-i18n="cookies.nottrack">We do not track</em>, only measure anonymous visits — (if you agree).
-                <button data-i18n-attr="aria-label" data-i18n="cookies.accept" id="accept-cookies" class="icons-scale" aria-label="Seguir navegando" type="button">Continue</button> | <a data-i18n-attr="aria-label" data-i18n="cookies.info" id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">What is a cookie?</a>
+                🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree).
+                <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a cookie?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
@@ -528,7 +534,7 @@
     <div id="modal-container" role="dialog" aria-hidden="true" tabindex="-1">
         <div id="modal-content">
             <div id="modal-iframe-wrapper">
-                <iframe data-i18n-attr="aria-label" data-i18n="modal.certificate" id="modal-iframe" src="#" aria-label="Official certificate"></iframe>
+                <iframe data-i18n-attr="aria-label" data-i18n="modal.iframe" id="modal-iframe" src="#" aria-label="Official certificate"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
             <button data-i18n-attr="aria-label" data-i18n="modal.close" id="modal-close" class="icons-color-1" aria-label="Close" type="button">
