--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -78,7 +78,7 @@
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
-    <link type="text/plain" rel="author" href="humans.txt">
+    <link type="text/plain" rel="author" href="../../humans.txt">
 
     <!-- GEOLOCATION FOR LOCAL SEO -->
     <meta name="distribution" content="national">
@@ -345,10 +345,10 @@
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf" aria-label="See certificate">Formación complementaria</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Ver certificado">Formación complementaria</a>
                             </li>
                         </ol>
                     </article>
@@ -401,7 +401,7 @@
                         <h6>Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf" aria-label="Ver certificado">Acceso a la universidad</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Ver certificado">Acceso a la universidad</a>
                             </li>
                         </ol>
                     </article>
@@ -409,7 +409,7 @@
                         <h6>IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
                             </li>
                         </ol>
                     </article>
@@ -436,7 +436,7 @@
                 <section>
                     <div class="others">
                         <h4 data-i18n="section.other">Otros datos</h4>
-                        <a  data-i18n-attr="aria-label" data-i18n="other.download_cv" class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
+                        <a  data-i18n-attr="aria-label" data-i18n="other.download_cv" class="other-links" href="../../doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
                             <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="../../img/sprite.svg#pdf"></use>
                             </svg>
