--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="og:image:alt" content="Gonzalo Cabezas | Desenvolupador Frontend web, CV i Portfolio">
-    <meta property="og:locale" content="es_ES">
+    <meta property="og:locale" content="ca_ES">
     <meta property="og:article:section" content="Tecnologia, Desenvolupament Web">
     <meta property="og:article:tag" content="Desenvolupador Frontend">
 
@@ -78,7 +78,7 @@
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
-    <link type="text/plain" rel="author" href="humans.txt">
+    <link type="text/plain" rel="author" href="../../humans.txt">
 
     <!-- GEOLOCATION FOR LOCAL SEO -->
     <meta name="distribution" content="national">
@@ -208,7 +208,7 @@
                             </a>
                         </li>
                         <li>
-                            <a data-lang="en" aria-label="Anglès" href="index.en.html">
+                            <a data-lang="en" aria-label="Anglès" href="../dark/index.en.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="../../img/sprite.svg#uk-flag"></use>
                                 </svg>
@@ -345,10 +345,10 @@
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> i <abbr title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><abbr title="JavaScript">JS</abbr> Vanilla i publicació web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><abbr title="JavaScript">JS</abbr> Vanilla i publicació web</a>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
                             </li>
                         </ol>
                     </article>
@@ -401,7 +401,7 @@
                         <h6>Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf" aria-label="Veure certificat">Accès a la universitat</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Veure certificat">Accès a la universitat</a>
                             </li>
                         </ol>
                     </article>
@@ -409,7 +409,7 @@
                         <h6>IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf" aria-label="Veure certificat">Certificat d'<abbr title="Educació Secundària Obligatòria">ESO</abbr></a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="Veure certificat">Certificat d'<abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
                             </li>
                         </ol>
                     </article>
@@ -436,7 +436,7 @@
                 <section>
                     <div class="others">
                         <h4 data-i18n="section.other">Altres dades</h4>
-                        <a  data-i18n-attr="aria-label" data-i18n="other.download_cv" class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descarregar CV pdf">
+                        <a  data-i18n-attr="aria-label" data-i18n="other.download_cv" class="other-links" href="../../doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descarregar CV pdf">
                             <svg class="icons-color-2 icons-scale" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="../../img/sprite.svg#pdf"></use>
                             </svg>
@@ -525,7 +525,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
                 🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació sobre cookies">Què és una cookie?</a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Continuar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació sobre cookies">Què és una cookie?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
