fixing more errors

--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -201,14 +201,14 @@
                         </li>
                         <!-- LANG MENU -->
                         <li>
-                            <a data-lang="es" aria-label="Espanyol" href="index.es.html">
+                            <a aria-label="Espanyol" href="index.es.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="../../img/sprite.svg#es-flag"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a data-lang="en" aria-label="Anglès" href="../../index.html">
+                            <a aria-label="Anglès" href="../../index.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="../../img/sprite.svg#uk-flag"></use>
                                 </svg>
