--- a/fallbacks/light/index.es.html
+++ b/fallbacks/light/index.es.html
@@ -201,14 +201,14 @@
                         </li>
                         <!-- LANG MENU -->
                         <li>
-                            <a data-lang="ca" aria-label="Catalán" href="index.ca.html">
+                            <a aria-label="Catalán" href="index.ca.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="../../img/sprite.svg#cat-flag"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a data-lang="en" aria-label="Inglés" href="../../index.html">
+                            <a aria-label="Inglés" href="../../index.html">
                                 <svg class="icons-scale" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                     <use href="../../img/sprite.svg#uk-flag"></use>
                                 </svg>
