fixing lang attr

--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -327,7 +327,7 @@
                         <h5 data-i18n="studies.daw.title">
                             <strong>Desarrollo de aplicaciones con tecnologias web</strong> <span>(cursando)</span>
                         </h5>
-                        <h6>Institució Pau Casals</h6>
+                        <h6 lang="ca-ES">Institució Pau Casals</h6>
                         <ol>
                             <li data-i18n="studies.daw.ja">
                                 <abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
@@ -339,7 +339,7 @@
                     </article>
                     <article>
                         <h5 data-i18n="studies.ifcd.title">Confección y publicación de páginas web</h5>
-                        <h6>ADAMS Formación</h6>
+                        <h6 lang="es-ES">ADAMS Formación</h6>
                         <ol>
                             <li data-i18n="studies.ifcd.hc">
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
@@ -398,7 +398,7 @@
                         <!--//CAROUSEL END -->
                     </article>
                     <article>
-                        <h6>Universidad Nacional de Educación a Distancia</h6>
+                        <h6 lang="es-ES">Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Ver certificado">Acceso a la universidad</a>
@@ -406,7 +406,7 @@
                         </ol>
                     </article>
                     <article>
-                        <h6>IES Joan Coromines</h6>
+                        <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
@@ -418,14 +418,14 @@
                     <h4 data-i18n="section.experience">Experiencia laboral</h4>
                     <article>
                         <h5 data-i18n="experience.sunlife.title">Relaciones públicas</h5>
-                        <h6>Sunlife</h6>
+                        <h6 lang="en-GB">Sunlife</h6>
                         <ol>
                             <li data-i18n="experience.sunlife.detail">Coordinador de equipo</li>
                         </ol>
                     </article>
                     <article>
                         <h5 data-i18n="experience.volunteer.title">Voluntario</h5>
-                        <h6>Banco de Alimentos</h6>
+                        <h6 lang="es-ES">Banco de Alimentos</h6>
                         <ol>
                             <li data-i18n="experience.volunteer.detail">Clasificación y empaquetado</li>
                         </ol>
@@ -452,7 +452,7 @@
                 </section>
                 <section>
                     <div class="others">
-                        <h4>Portfolio</h4>
+                        <h4 lang="en-GB">Portfolio</h4>
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
