--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -327,7 +327,7 @@
                         <h5 data-i18n="studies.daw.title">
                             <strong>Desenvolupament d'aplicacions amb tecnologies web</strong> <span>(cursant)</span>
                         </h5>
-                        <h6>Institució Pau Casals</h6>
+                        <h6 lang="ca-ES">Institució Pau Casals</h6>
                         <ol>
                             <li data-i18n="studies.daw.ja">
                                 <abbr title="JavaScript Object Notation">JSON</abbr> i <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
@@ -339,7 +339,7 @@
                     </article>
                     <article>
                         <h5 data-i18n="studies.ifcd.title">Confecció i publicació de pàgines web</h5>
-                        <h6>ADAMS Formación</h6>
+                        <h6 lang="es-ES">ADAMS Formación</h6>
                         <ol>
                             <li data-i18n="studies.ifcd.hc">
                                 <abbr title="Hypertext Markup Language">HTML5</abbr> i <abbr title="Cascading Style Sheets">CSS3</abbr>
@@ -398,7 +398,7 @@
                         <!--//CAROUSEL END -->
                     </article>
                     <article>
-                        <h6>Universidad Nacional de Educación a Distancia</h6>
+                        <h6 lang="es-ES">Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.uned.access" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Veure certificat">Accès a la universitat</a>
@@ -406,7 +406,7 @@
                         </ol>
                     </article>
                     <article>
-                        <h6>IES Joan Coromines</h6>
+                        <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="Veure certificat">Certificat d'<abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
@@ -418,14 +418,14 @@
                     <h4 data-i18n="section.experience">Experiència laboral</h4>
                     <article>
                         <h5 data-i18n="experience.sunlife.title">Relacions públiques</h5>
-                        <h6>Sunlife</h6>
+                        <h6 lang="en-GB">Sunlife</h6>
                         <ol>
                             <li data-i18n="experience.sunlife.detail">Coordinador d'equip</li>
                         </ol>
                     </article>
                     <article>
                         <h5 data-i18n="experience.volunteer.title">Voluntari</h5>
-                        <h6>Banco de Alimentos</h6>
+                        <h6 lang="es-ES">Banco de Alimentos</h6>
                         <ol>
                             <li data-i18n="experience.volunteer.detail">Clasificació i empaquetat</li>
                         </ol>
@@ -452,7 +452,7 @@
                 </section>
                 <section>
                     <div class="others">
-                        <h4>Portfolio</h4>
+                        <h4 lang="en-GB">Portfolio</h4>
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
